--- a/src/App.css
+++ b/src/App.css
@@ -3,24 +3,138 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  object-fit: contain;
+  height: 15vh;
+}
+.App-big-logo {
+  object-fit: contain;
+  height: 30vh;
+}
+.App-drag-img {
+  object-fit: contain;
+  height: 7vh;
+}
+.LoginPage {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: #101631;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2.5em;
+}
+
+.App-hall-title {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 2.5em;
+  align-self: center;
+}
+
+.Clock-NUM {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 25vh;
+  align-self: center;
+  text-align: center;
+  padding: 0
+}
+
+.Clock-AMPM {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 4em;
+}
+
+.App-hall-unit {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+.form {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+}
+.field {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.5em;
+  display: flex;
+  padding: 5;
+}
+.Home-input {
+  background-color: red
+}
+.field-string {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1em;
+  width: 25vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.App-home-div {
+  display: flex;
+  flex-wrap: wrap;
+  height: 80vh;
+  align-items: center;
+}
+.App-home-lc {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  height: 60vh;
+  align-items: center;
+}
+.App-home-uc {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding-left: 20;
+  padding-right: 20;
+  width: 65vw;
+  height: 30vh;
+  align-items: center;
+}
+
+button {
+  margin: 10px;
+  padding: 10px;
+  font-size: 1em;
+  font-family: 'Roboto Condensed', sans-serif;
+  border-radius: 10px;
+  border-color: #17b8cb;
+}
+.Admin-alert {
+  margin: 10px;
+  padding: 10px;
+  font-size: 2.5em;
+  font-family: 'Roboto Condensed', sans-serif;
+  border-width: 1;
+  border-radius: 10px;
+  border-color: #17b8cb;
+}
+.Home-alert {
+  margin: 10px;
+  padding: 10px;
+  font-size: 6em;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+input {
+  border-radius: 5
 }
 
 @keyframes App-logo-spin {
