--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ h1 {
   padding: 5;
 }
 .Home-input {
-  background-color: red
+  /* background-color: red */
 }
 .field-string {
   font-family: 'Roboto Condensed', sans-serif;
